--- a/_posts/python/3d-mesh/mesh-3d.ipynb
+++ b/_posts/python/3d-mesh/mesh-3d.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "#### Version Check\n",
-    "Note: Tables are available in version <b>1.9.2+</b><br>\n",
+    "Note: 3D Mesh are available in version <b>1.10.0+</b><br>\n",
     "Run  `pip install plotly --upgrade` to update your Plotly version"
    ]
   },
@@ -57,40 +57,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import plotly.graph_objs as go\n",
-    "import plotly.plotly as py\n",
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are using data present in a separate text file. The file can be downloaded from [here](https://github.com/plotly/documentation/tree/source-design-merge/_posts/python/3d-mesh/data-set.txt)"
+    "We are using data present in a separate text file. The file can be downloaded from [here](https://github.com/plotly/documentation/tree/source-design-merge/_posts/python/3d-mesh/dataset.txt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "pts=np.loadtxt('dataset.txt')\n",
-    "x,y,z=zip(*pts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -98,18 +73,25 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/2515.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/2535.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "import numpy as np\n",
+    "\n",
+    "pts=np.loadtxt('dataset.txt')\n",
+    "x,y,z=zip(*pts)\n",
+    "\n",
     "trace = go.Mesh3d(x=x,y=y,z=z,color='90EE90',opacity=0.50)\n",
     "py.iplot([trace])"
    ]
@@ -130,21 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "trace = go.Mesh3d(x=x,y=y,z=z,\n",
-    "                   alphahull=5,\n",
-    "                   opacity=0.4,\n",
-    "                   color='00FFFF')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -152,18 +120,29 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/2517.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~tarzzz/2537.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "import numpy as np\n",
+    "\n",
+    "pts=np.loadtxt('dataset.txt')\n",
+    "x,y,z=zip(*pts)\n",
+    "\n",
+    "trace = go.Mesh3d(x=x,y=y,z=z,\n",
+    "                   alphahull=5,\n",
+    "                   opacity=0.4,\n",
+    "                   color='00FFFF')\n",
     "py.iplot([trace])"
    ]
   },
@@ -177,11 +156,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "\n",
