gauge chart updates

--- a/_posts/python/range-slider/range-slider.ipynb
+++ b/_posts/python/range-slider/range-slider.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### API Authentication\n",
-    "New to Plotly's python API? <br> \n",
-    "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
-    "Find your api_key here: https://plot.ly/settings/api"
+    "#### New to Plotly?\n",
+    "Plotly's Python library is free and open source! [Get started](https://plot.ly/python/getting-started/) by dowloading the client and [reading the primer](https://plot.ly/python/getting-started/).\n",
+    "<br>You can set up Plotly to work in [online](https://plot.ly/python/getting-started/#initialization-for-online-plotting) or [offline](https://plot.ly/python/getting-started/#initialization-for-offline-plotting) mode, or in [jupyter notebooks](https://plot.ly/python/getting-started/#start-plotting-online).\n",
+    "<br>We also have a quick-reference [cheatsheet](https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf) (new!) to help you get started!"
    ]
   },
   {
@@ -47,12 +47,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Basic Range Selectors and a Range Slider"
+    "#### Basic Range Slider and Range Selectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -60,13 +60,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11593.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11850.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,6 @@
     "                   y=df.High)\n",
     "\n",
     "data = [trace]\n",
-    "\n",
     "layout = dict(\n",
     "    title='Time series with range slider and selectors',\n",
     "    xaxis=dict(\n",
@@ -130,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -158,6 +157,36 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-cDdCaS-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
+      "\u001b[?25hSuccessfully installed publisher-0.10\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
+      "\n",
+      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
