--- a/_posts/python/gauge-chart/linear-gauge.ipynb
+++ b/_posts/python/gauge-chart/linear-gauge.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### API Authentication\n",
-    "New to Plotly's python API? <br> \n",
-    "Learn about API authentication here: https://plot.ly/python/getting-started <br>\n",
-    "Find your api_key here: https://plot.ly/settings/api"
+    "#### New to Plotly?\n",
+    "Plotly's Python library is free and open source! [Get started](https://plot.ly/python/getting-started/) by dowloading the client and [reading the primer](https://plot.ly/python/getting-started/).\n",
+    "<br>You can set up Plotly to work in [online](https://plot.ly/python/getting-started/#initialization-for-online-plotting) or [offline](https://plot.ly/python/getting-started/#initialization-for-offline-plotting) mode, or in [jupyter notebooks](https://plot.ly/python/getting-started/#start-plotting-online).\n",
+    "<br>We also have a quick-reference [cheatsheet](https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf) (new!) to help you get started!"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +34,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,15 +45,24 @@
     "import plotly.graph_objs as go\n",
     "\n",
     "# Define Titles and Labels for Each Scale\n",
-    "scales = ['<b>Tension</b>', '<b>Energy</b>', '<b>Valence</b>', '<b>Prefer</b>']\n",
-    "scale1 = ['Very <br> Calm ', 'Moderately <br> Calm ', 'Slightly <br> Calm ', 'Neutral ',\n",
-    "          'Slightly <br> Tense ', 'Moderately <br> Tense ', 'Very <br> Tense ']\n",
-    "scale2 = ['Very <br> Tired ', 'Moderately <br> Tired ', 'Slightly <br> Tired ', 'Neutral ',\n",
-    "          'Slightly <br> Awake ', 'Moderately <br> Awake ', 'Very <br> Awake ']\n",
-    "scale3 = ['Very <br> Displeased ', 'Moderately <br> Displeased ', 'Slightly <br> Displeased ', 'Neutral ',\n",
-    "          'Slightly <br> Pleased ', 'Moderately <br> Pleased ', 'Very <br> Pleased ']\n",
-    "scale4 = ['Strongly <br> Dislike ', 'Moderately <br> Dislike ', 'Slightly <br> Dislike ', 'Neutral ',\n",
-    "          'Slightly <br> Like ', 'Moderately <br> Like ', 'Strongly <br> Like ']\n",
+    "scales = ['<b>Tension</b>', '<b>Energy</b>',\n",
+    "          '<b>Valence</b>', '<b>Prefer</b>']\n",
+    "scale1 = ['Very <br> Calm ', 'Moderately <br> Calm ',\n",
+    "          'Slightly <br> Calm ', 'Neutral ',\n",
+    "          'Slightly <br> Tense ', 'Moderately <br> Tense ',\n",
+    "          'Very <br> Tense ']\n",
+    "scale2 = ['Very <br> Tired ', 'Moderately <br> Tired ',\n",
+    "          'Slightly <br> Tired ', 'Neutral ',\n",
+    "          'Slightly <br> Awake ', 'Moderately <br> Awake ',\n",
+    "          'Very <br> Awake ']\n",
+    "scale3 = ['Very <br> Displeased ', 'Moderately <br> Displeased ',\n",
+    "          'Slightly <br> Displeased ', 'Neutral ',\n",
+    "          'Slightly <br> Pleased ', 'Moderately <br> Pleased ',\n",
+    "          'Very <br> Pleased ']\n",
+    "scale4 = ['Strongly <br> Dislike ', 'Moderately <br> Dislike ',\n",
+    "          'Slightly <br> Dislike ', 'Neutral ',\n",
+    "          'Slightly <br> Like ', 'Moderately <br> Like ',\n",
+    "          'Strongly <br> Like ']\n",
     "scale_labels = [scale1, scale2, scale3, scale4]\n",
     "\n",
     "# Add Scale Titles to the Plot\n",
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +154,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +204,7 @@
     {
      "data": {
       "text/html": [
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/µacss/ipython-notebook-custom.css\">"
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -209,14 +218,14 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-2Gkndf-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-sFO9mf-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
       "      Successfully uninstalled publisher-0.10\n",
       "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
       "\u001b[?25hSuccessfully installed publisher-0.10\n",
-      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.1 is available.\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
@@ -225,10 +234,9 @@
     "from IPython.display import display, HTML\n",
     "\n",
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
-    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/µacss/ipython-notebook-custom.css\">'))\n",
+    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
     "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
-    "\n",
     "import publisher\n",
     "publisher.publish(\n",
     "    'linear-gauge.ipynb', 'python/linear-gauge-chart/', 'Python Linear-Gauge Chart | plotly',\n",
