--- a/_posts/python/gauge-chart/semicircular-gauge.ipynb
+++ b/_posts/python/gauge-chart/semicircular-gauge.ipynb
@@ -4,55 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gauge Meter Chart in Python\n",
-    "===============\n",
-    "\n",
-    "Learn about API authentication here: [https://plot.ly/python/getting-started](https://plot.ly/python/getting-started) <br>\n",
-    "Find your api_key here: [https://plot.ly/settings/api](https://plot.ly/settings/api)  <br>\n",
-    "For more information about plotly figure attibutes, see: [https://plot.ly/python/reference/](https://plot.ly/python/reference/)  <br>"
+    "#### New to Plotly?\n",
+    "Plotly's Python library is free and open source! [Get started](https://plot.ly/python/getting-started/) by dowloading the client and [reading the primer](https://plot.ly/python/getting-started/).\n",
+    "<br>You can set up Plotly to work in [online](https://plot.ly/python/getting-started/#initialization-for-online-plotting) or [offline](https://plot.ly/python/getting-started/#initialization-for-offline-plotting) mode, or in [jupyter notebooks](https://plot.ly/python/getting-started/#start-plotting-online).\n",
+    "<br>We also have a quick-reference [cheatsheet](https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf) (new!) to help you get started!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Outline\n",
+    "##### Gauge Chart Outline\n",
     "\n",
     "We will use `donut` charts with custom colors to create a `semi-circular` gauge meter, such that lower half of the chart is invisible(same color as background).\n",
     "\n",
     "This `semi-circular` meter will be overlapped on a base `donut` chart to create the `analog range` of the meter. We will have to rotate the base chart to align the range marks in the edges of meter's section, because by default `Plotly` places them at the center of a pie section."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.9.3\n"
-     ]
-    }
-   ],
-   "source": [
-    "from plotly import __version__\n",
-    "print __version__"
    ]
   },
   {
@@ -72,6 +38,9 @@
    },
    "outputs": [],
    "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
     "base_chart = {\n",
     "    \"values\": [40, 10, 10, 10, 10, 10, 10],\n",
     "    \"labels\": [\"-\", \"0\", \"20\", \"40\", \"60\", \"80\", \"100\"],\n",
@@ -132,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -248,13 +217,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~pravj648/239.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/11852.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -340,17 +309,29 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-_Fjr3d-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
+      "\u001b[?25hSuccessfully installed publisher-0.10\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from ipython_nbconvert instead.\n",
-      "\n",
-      "/usr/local/lib/python2.7/dist-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
@@ -360,13 +341,15 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'semicircular-gauge.ipynb', 'python/gauge-meter', 'Python Gauge Meter | plotly',\n",
+    "    'semicircular-gauge.ipynb', 'python/gauge-charts/', 'Python Gauge Chart | plotly',\n",
     "    'How to make guage meter charts in Python with Plotly. ',\n",
-    "    name = 'Semicircular-Gauge-Meter',\n",
-    "    thumbnail='thumbnail/linear-gauge.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=31)"
+    "    name = 'Gauge Charts',\n",
+    "    title = 'Python Gauge Chart | plotly',\n",
+    "    thumbnail='thumbnail/gauge.jpg', language='python',\n",
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=11)"
    ]
   },
   {
@@ -395,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
