--- a/_posts/python/gauge-chart/semicircular-gauge.ipynb
+++ b/_posts/python/gauge-chart/semicircular-gauge.ipynb
@@ -94,8 +94,7 @@
    "source": [
     "##### Meter Chart\n",
     "\n",
-    "Now we will superimpose out `semi-circular` meter on top of this.\n",
-    "\n",
+    "Now we will superimpose our `semi-circular` meter on top of this.<br>\n",
     "For that, we will also use 6 sections, but one of them will be invisible to form the lower half (colored same as the background)."
    ]
   },
@@ -164,10 +163,8 @@
    "source": [
     "##### Dial\n",
     "\n",
-    "Now we need a `dial` to show the current position in the meter at a particular time.\n",
-    "\n",
-    "`Plotly's` [path shape](https://plot.ly/python/reference/#layout-shapes-path) can be used for this. A nice explanation of SVG path is available [here](https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths) by Mozilla.\n",
-    "\n",
+    "Now we need a `dial` to show the current position in the meter at a particular time.<br>\n",
+    "`Plotly's` [path shape](https://plot.ly/python/reference/#layout-shapes-path) can be used for this. A nice explanation of SVG path is available [here](https://developer.mozilla.org/en-US/docs/Web/SVG/Tutorial/Paths) by Mozilla.<br>\n",
     "We can use a `filled triangle` to create our `Dial`."
    ]
   },
@@ -209,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +220,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,17 +266,14 @@
     "# we don't want the boundary now\n",
     "base_chart['marker']['line']['width'] = 0\n",
     "\n",
-    "fig = {\n",
-    "  \"data\": [base_chart, meter_chart],\n",
-    "  \"layout\": layout\n",
-    "}\n",
-    "\n",
+    "fig = {\"data\": [base_chart, meter_chart],\n",
+    "       \"layout\": layout}\n",
     "py.iplot(fig, filename='gauge-meter-chart')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -313,7 +307,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-_Fjr3d-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-d9LFLu-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
@@ -322,16 +316,6 @@
       "\u001b[?25hSuccessfully installed publisher-0.10\n",
       "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
