+ref for shape doc

--- a/_posts/python/shapes/shapes.ipynb
+++ b/_posts/python/shapes/shapes.ipynb
@@ -958,6 +958,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference\n",
+    "See https://plot.ly/python/reference/#layout-shapes for more information and chart attribute options!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
