--- a/_posts/python/line-plots/lines.ipynb
+++ b/_posts/python/line-plots/lines.ipynb
@@ -14,12 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Simple Line Plot"
+    "#### Simple Line Plot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Line Plot Modes"
+    "#### Line Plot Modes"
    ]
   },
   {
@@ -133,14 +133,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Style Line Plots\n",
+    "#### Style Line Plots\n",
     "This example styles the color and dash of the traces, adds trace names, \n",
     "modifiys line width, and adds plot and axes titles."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,12 +243,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Connect Data Gaps"
+    "#### Connect Data Gaps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +262,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,12 +301,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Interpolation with Line Plots"
+    "#### Interpolation with Line Plots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +320,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,12 +408,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Label Lines with Annotations"
+    "#### Label Lines with Annotations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -421,13 +421,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8773.embed\" height=\"600px\" width=\"600px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/8773.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,8 +502,6 @@
     "        showline=False,\n",
     "        showticklabels=False,\n",
     "    ),\n",
-    "    height=600,\n",
-    "    width=600,\n",
     "    autosize=False,\n",
     "    margin=dict(\n",
     "        autoexpand=False,\n",
@@ -567,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +579,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,14 +691,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### References"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "See https://plot.ly/python/reference/#scatter for more information and chart attribute options!\n"
+    "#### Reference\n",
+    "See https://plot.ly/python/reference/#scatter for more information and chart attribute options!"
    ]
   },
   {
