ipython tut updates

--- a/_posts/python/static-image/static-image-export.ipynb
+++ b/_posts/python/static-image/static-image-export.ipynb
@@ -4,18 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Static Image Export\n",
-    "Plotly allows you to save static images of your plots. You can either save the image onto your local computer, or embed it inside your Jupyter/IPython notebooks as a static image. \n",
-    "\n",
-    "\n",
-    "\n",
-    "## Save the image:\n",
+    "#### New to Plotly?\n",
+    "Plotly's Python library is free and open source! [Get started](https://plot.ly/python/getting-started/) by dowloading the client and [reading the primer](https://plot.ly/python/getting-started/).\n",
+    "<br>You can set up Plotly to work in [online](https://plot.ly/python/getting-started/#initialization-for-online-plotting) or [offline](https://plot.ly/python/getting-started/#initialization-for-offline-plotting) mode, or in [jupyter notebooks](https://plot.ly/python/getting-started/#start-plotting-online).\n",
+    "<br>We also have a quick-reference [cheatsheet](https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf) (new!) to help you get started!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the image:\n",
     "To save the image, you need to login to plotly using [your credentials](https://plot.ly/settings/api) (username and API Key)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -42,9 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -187,8 +192,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class image in module plotly.plotly.plotly:\n",
+      "\n",
+      "class image\n",
+      " |  Helper functions wrapped around plotly's static image generation api.\n",
+      " |  \n",
+      " |  Class methods defined here:\n",
+      " |  \n",
+      " |  ishow(cls, figure_or_data, format='png', width=None, height=None, scale=None) from __builtin__.classobj\n",
+      " |      Display a static image of the plot described by `figure_or_data`\n",
+      " |      in an IPython Notebook.\n",
+      " |      \n",
+      " |      positional arguments:\n",
+      " |      - figure_or_data: The figure dict-like or data list-like object that\n",
+      " |                        describes a plotly figure.\n",
+      " |                        Same argument used in `py.plot`, `py.iplot`,\n",
+      " |                        see https://plot.ly/python for examples\n",
+      " |      - format: 'png', 'svg', 'jpeg', 'pdf'\n",
+      " |      - width: output width\n",
+      " |      - height: output height\n",
+      " |      - scale: Increase the resolution of the image by `scale` amount\n",
+      " |             Only valid for PNG and JPEG images.\n",
+      " |      \n",
+      " |      example:\n",
+      " |      ```\n",
+      " |      import plotly.plotly as py\n",
+      " |      fig = {'data': [{'x': [1, 2, 3], 'y': [3, 1, 5], 'type': 'bar'}]}\n",
+      " |      py.image.ishow(fig, 'png', scale=3)\n",
+      " |  \n",
+      " |  save_as(cls, figure_or_data, filename, format=None, width=None, height=None, scale=None) from __builtin__.classobj\n",
+      " |      Save a image of the plot described by `figure_or_data` locally as\n",
+      " |      `filename`.\n",
+      " |      \n",
+      " |      Valid image formats are 'png', 'svg', 'jpeg', and 'pdf'.\n",
+      " |      The format is taken as the extension of the filename or as the\n",
+      " |      supplied format.\n",
+      " |      \n",
+      " |      positional arguments:\n",
+      " |      - figure_or_data: The figure dict-like or data list-like object that\n",
+      " |                        describes a plotly figure.\n",
+      " |                        Same argument used in `py.plot`, `py.iplot`,\n",
+      " |                        see https://plot.ly/python for examples\n",
+      " |      - filename: The filepath to save the image to\n",
+      " |      - format: 'png', 'svg', 'jpeg', 'pdf'\n",
+      " |      - width: output width\n",
+      " |      - height: output height\n",
+      " |      - scale: Increase the resolution of the image by `scale` amount\n",
+      " |             Only valid for PNG and JPEG images.\n",
+      " |      \n",
+      " |      example:\n",
+      " |      ```\n",
+      " |      import plotly.plotly as py\n",
+      " |      fig = {'data': [{'x': [1, 2, 3], 'y': [3, 1, 5], 'type': 'bar'}]}\n",
+      " |      py.image.save_as(fig, 'my_image.png', scale=3)\n",
+      " |      ```\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  get(figure_or_data, format='png', width=None, height=None, scale=None)\n",
+      " |      Return a static image of the plot described by `figure_or_data`.\n",
+      " |      \n",
+      " |      positional arguments:\n",
+      " |      - figure_or_data: The figure dict-like or data list-like object that\n",
+      " |                        describes a plotly figure.\n",
+      " |                        Same argument used in `py.plot`, `py.iplot`,\n",
+      " |                        see https://plot.ly/python for examples\n",
+      " |      - format: 'png', 'svg', 'jpeg', 'pdf'\n",
+      " |      - width: output width\n",
+      " |      - height: output height\n",
+      " |      - scale: Increase the resolution of the image by `scale`\n",
+      " |               amount (e.g. `3`)\n",
+      " |               Only valid for PNG and JPEG images.\n",
+      " |      \n",
+      " |      example:\n",
+      " |      ```\n",
+      " |      import plotly.plotly as py\n",
+      " |      fig = {'data': [{'x': [1, 2, 3], 'y': [3, 1, 5], 'type': 'bar'}]}\n",
+      " |      py.image.get(fig, 'png', scale=3)\n",
+      " |      ```\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(py.image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -216,6 +326,36 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-h5AyOS-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
+      "\u001b[?25hSuccessfully installed publisher-0.10\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
+      "\n",
+      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
+     ]
     }
    ],
    "source": [
@@ -224,13 +364,15 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
     "    'static-image-export.ipynb', 'python/static-image-export/', 'Static Image Export | plotly',\n",
-    "    'How to export plotly graphs as static images',\n",
-    "    name = 'static-image-export',\n",
+    "    'Plotly allows you to save static images of your plots. You can either save the image onto your local computer, or embed it inside your Jupyter/IPython notebooks as a static image. ',\n",
+    "    title = 'Static Image Export | plotly',\n",
+    "    name = 'Static Image Export',\n",
     "    thumbnail='thumbnail/png-export.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=2)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=15)"
    ]
   },
   {
