static img tutorial

--- a/_posts/python/static-image/static-image-export.ipynb
+++ b/_posts/python/static-image/static-image-export.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +332,7 @@
      "output_type": "stream",
      "text": [
       "Collecting git+https://github.com/plotly/publisher.git\n",
-      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-h5AyOS-build\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-lbBR7c-build\n",
       "Installing collected packages: publisher\n",
       "  Found existing installation: publisher 0.10\n",
       "    Uninstalling publisher-0.10:\n",
@@ -341,20 +341,6 @@
       "\u001b[?25hSuccessfully installed publisher-0.10\n",
       "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning:\n",
-      "\n",
-      "The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
-      "\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
      ]
     }
    ],
@@ -368,7 +354,7 @@
     "import publisher\n",
     "publisher.publish(\n",
     "    'static-image-export.ipynb', 'python/static-image-export/', 'Static Image Export | plotly',\n",
-    "    'Plotly allows you to save static images of your plots. You can either save the image onto your local computer, or embed it inside your Jupyter/IPython notebooks as a static image. ',\n",
+    "    'Plotly allows you to save static images of your plots. Save the image to your local computer, or embed it inside your Jupyter notebooks as a static image.',\n",
     "    title = 'Static Image Export | plotly',\n",
     "    name = 'Static Image Export',\n",
     "    thumbnail='thumbnail/png-export.png', language='python',\n",
